mise en place loader

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>ohmyfood | open</title>
 </head>
 <body>
-    <p>lolll</p>
+    <div class=loader>
+        <div class="loader-1"></div>
+    </div>
+    <header>
+        <h1>Ohmyfood</h1>
+    </header>
 </body>
 </html>
